Set the image to modified when changing an annotation

BUG:441704